--- a/task-03.html
+++ b/task-03.html
@@ -8,6 +8,28 @@
     <link rel="stylesheet" href="css/common.css" />
   </head>
   <body>
+
+    <style>
+
+        .img__list
+        {
+          display: flex;
+          flex-direction: column;
+        }
+
+        .img__list:not(:last-child)
+        {
+          margin-bottom: 20px;
+        }
+
+        .img__item
+        {
+          width: 300px;
+          height: 200px;
+        }
+
+    </style>
+
     <p><a href="index.html">Go back</a></p>
 
     <ul class="gallery"></ul>
